--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "manualized-toc",
-  "displayName": "Manualized Toc",
-  "publisher": "tomo-iris",
+  "displayName": "Manualized TOC",
   "description": "generate TOC from comments, i.e., you can edit them manually",
   "version": "1.2.0",
   "engines": {
@@ -13,8 +12,8 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./extension.js",
-  "contributes": {
+  "main": "./dist/extension.js",
+"contributes": {
     "views": {
       "vsclauncher": [
         {
@@ -97,17 +96,16 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.54.0",
-    "eslint": "^7.19.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.2.1",
-    "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
-  },
-  "dependencies": {
-    "vsce": "^2.15.0"
+    "@types/vscode": "^1.91.0",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "20.x",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.0",
+    "esbuild": "^0.21.5",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.4.5",
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.4.0"
   }
 }
