--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "manualized-toc",
   "displayName": "Manualized TOC",
   "description": "generate TOC from comments, i.e., you can edit them manually",
-  "version": "1.2.0",
+  "version": "1.3.0",
+  "icon": "img/VSCodeExt-Icon_Manualized-Toc.drawio.png",
   "engines": {
     "vscode": "^1.91.0"
   },
@@ -13,7 +14,7 @@
     "onStartupFinished"
   ],
   "main": "./dist/extension.js",
-"contributes": {
+  "contributes": {
     "views": {
       "vsclauncher": [
         {
@@ -36,24 +37,43 @@
       "properties": {
         "manualized_toc.comment_symbols": {
           "type": "object",
-          "description": "update information for comment out symbols joining with spaces,\nyou should check https://code.visualstudio.com/docs/languages/identifiers#_known-language-identifiers to know the expression for language\n`<lang>: <symbols> <symbols>, <lang2>: <symbols> ...`",
+          "description": "update information for comment out symbols,\nyou should check https://code.visualstudio.com/docs/languages/identifiers#_known-language-identifiers to know the expression for language",
           "default": {
-              "javascript": ["//"],
-              "python": ["#"],
-              "c": ["//"],
-              "cpp": ["//"],
-              "bash": ["#"],
-              "shellscript": ["#"],
-              "php": ["#", "//"],
-              "typescript": ["//"]
+            "javascript": [
+              "//"
+            ],
+            "python": [
+              "#"
+            ],
+            "c": [
+              "//"
+            ],
+            "cpp": [
+              "//"
+            ],
+            "bash": [
+              "#"
+            ],
+            "shellscript": [
+              "#"
+            ],
+            "php": [
+              "#",
+              "//"
+            ],
+            "typescript": [
+              "//"
+            ]
           }
         },
         "manualized_toc.header_symbols": {
           "type": "object",
-          "description": "update information for header symbols,\n`<lang>: <symbols>, <lang2>: <symbols> ...`",
-          "default":{
-            "markdown": ["#"]
-        }
+          "description": "update information for header symbols",
+          "default": {
+            "markdown": [
+              "#"
+            ]
+          }
         },
         "manualized_toc.depth_parent_max": {
           "type": "integer",
